--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev -- respawn --transpile-only server.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm server.ts",
     "start": "node build/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false",
     "build": "tsc"
